Revert "add feature mmany company"
This reverts commit 0649237885071e470dd11428112edd7291993210.
